; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/etherswitchcfg/extr_ifmedia.c_lookup_media_word.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/etherswitchcfg/extr_ifmedia.c_lookup_media_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifmedia_description = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lookup_media_word(%struct.ifmedia_description* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ifmedia_description*, align 8
  %5 = alloca i8*, align 8
  store %struct.ifmedia_description* %0, %struct.ifmedia_description** %4, align 8
  store i8* %1, i8** %5, align 8
  br label %6

6:                                                ; preds = %23, %2
  %7 = load %struct.ifmedia_description*, %struct.ifmedia_description** %4, align 8
  %8 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %6
  %12 = load %struct.ifmedia_description*, %struct.ifmedia_description** %4, align 8
  %13 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @strcasecmp(i32* %14, i8* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = load %struct.ifmedia_description*, %struct.ifmedia_description** %4, align 8
  %20 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %11
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.ifmedia_description*, %struct.ifmedia_description** %4, align 8
  %25 = getelementptr inbounds %struct.ifmedia_description, %struct.ifmedia_description* %24, i32 1
  store %struct.ifmedia_description* %25, %struct.ifmedia_description** %4, align 8
  br label %6

26:                                               ; preds = %6
  store i32 -1, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %18
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @strcasecmp(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
